18 Sep 2006: 0.2.16 Miek <miek@miek.nl>
   -- bugfixes and moved to the perl utils --
   rdup:
   * some compilation updates for Solaris 10 (dirdf)
   * small documentation updates
   configure:
   * added check for GNU make (isn't used yet)
   scripts:
   * All sizes are report in MB
   * mirror.pl: major fixes: use the correct backup dir
     and correct -c.
     Allow multiple -b options to backup to different directories
     at the same time
     The -b argument is mandatory, but can now be given
     multiple times.
   * dump.sh: use the perl tools! Added -x option.
     The -b argument is mandatory, but can now be given
     multiple times.
     The $HOST directory isn't added by default! Now you need
     to specify: -b /vol/backup/$HOST
   * dump-here.sh: use perl tools too.
   * Added crypt.pl - a perl version crypt.sh


1 Sep 2006: 0.2.15 Miek <miek@miek.nl>
   scripts:
   * refactored mirror.sh, rorrim.sh, monthday.sh, mirror.pl
   * dump.sh: more quotes for dirs with spaces. Re-add trailing spaces 
     to path names
   * coding style changes to the perl scripts.
   * rdup: add -l (local) option. Disable size checking for
     files when doing a local backup and don't skip the file.
   * Documentation updates


1 Jul 2006: 0.2.14 Miek <miek@miek.nl>
   -- misc. bugfixes and new features --
   scripts:
   * use dd for "catching" the files' content
   * eliminate the use of 'head' as this didn't work on freebsd
   * dump-here.sh must be edited before use (added exit 1)
   * Added pl-tools/ directory for perl contributed scripts:
     added gzip.pl and mirror.pl both from Mark J Hewitt
     These are up to 50 times faster than the shell scripts!
   * Remove rb-tools dir from distribution - not uses & not finished
   * moved wrapper scripts (dump.sh, dump-here.sh and restore.sh) to
     sh-wrapper/ directory
   * implement good bash coding style(Remarks from Bob Proulx)
     use booleans in the scripts
     kill whitespace
   rdup: