@@ -1,38 +1,0 @@
-'\" t
-.TH CRYPT.SH 1 "27 Feb 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
-        
-.SH NAME
-crypt.sh, encrypt \- encrypt files received from \fBrdup -c\fR
-
-.SH SYNOPSIS
-.B crypt.sh
-.IR KEYFILE
-[
-.IR OPTIONS
-]
-
-.SH DESCRIPTION
-\fBcrypt.sh\fR, by default,  encrypts the data it receives from \fBrdup\fR with the
-key contained in \fIKEYFILE\fR.
-.PP
-For example,
-.PP
-        rdup -c list ~/Documents | crypt.sh KEY | mirror.sh -c -b /tmp/storage
-.PP
-Note the \fI-c\fR option for \fBmirror.sh\fR.
-
-.SH OPTIONS
-.TP
-.B \-c
-This option is ignored, \fBcrypt.sh\fR always works on the files'
-content. This "feature" was added because all rdup-util scripts have
-such an option.
-.TP
-.B \-d
-Decrypt the files.
-.TP
-.B \-V
-Show the version.
-
-.SH SEE ALSO
-gzip.sh(1), mirror.sh(8) and mcrypt(1).
