@@ -1,0 +1,36 @@
+'\" t
+.TH GZIP.PL 1 "27 Feb 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
+        
+.SH NAME
+gzip.pl, compress \-  compress files received from \fBrdup -c\fR
+
+.SH SYNOPSIS
+.B gzip.pl
+[
+.IR OPTIONS
+]
+
+.SH DESCRIPTION
+\fBgzip.pl\fR compresses the data it receives from \fBrdup\fR with gzip.
+.PP
+For example,
+.PP
+        rdup -c list ~/Documents | gzip.pl | mirror.pl -c -b /tmp/storage
+.PP
+Note the \fI-c\fR option for \fBmirror.pl\fR.
+
+.SH OPTIONS
+.TP
+.B \-c
+This option is ignored, \fBgzip.pl\fR always works on the files'
+content. This "feature" was added because all rdup-util scripts have
+such an option.
+.TP
+.B \-d
+Decompress the files.
+.TP
+.B \-V
+Show the version.
+
+.SH SEE ALSO
+crypt.pl(1) and mirror.pl(8).
