@@ -1,36 +1,0 @@
-'\" t
-.TH GZIP.SH 1 "27 Feb 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
-        
-.SH NAME
-gzip.sh, compress \-  compress files received from \fBrdup -c\fR
-
-.SH SYNOPSIS
-.B gzip.sh
-[
-.IR OPTIONS
-]
-
-.SH DESCRIPTION
-\fBgzip.sh\fR compresses the data it receives from \fBrdup\fR with gzip.
-.PP
-For example,
-.PP
-        rdup -c list ~/Documents | gzip.sh | mirror.sh -c -b /tmp/storage
-.PP
-Note the \fI-c\fR option for \fBmirror.sh\fR.
-
-.SH OPTIONS
-.TP
-.B \-c
-This option is ignored, \fBgzip.sh\fR always works on the files'
-content. This "feature" was added because all rdup-util scripts have
-such an option.
-.TP
-.B \-d
-Decompress the files.
-.TP
-.B \-V
-Show the version.
-
-.SH SEE ALSO
-crypt.sh(1) and mirror.sh(8).
