@@ -50,7 +50,7 @@ _echo2() {
         echo "** $PROGNAME: $1" >&2
 }
 
-while getopts ":ab:k:l:c:N:s:vzxehV" o; do
+while getopts ":ab:k:l:c:N:vzxehV" o; do
         case $o in
                 b) BACKUPDIR="$BACKUPDIR -b $OPTARG"
                 if [[ -z $FIRST ]]; then
@@ -84,7 +84,6 @@ while getopts ":ab:k:l:c:N:s:vzxehV" o; do
                 a) a="-a";;
                 v) v="-v";;
                 x) x="-x";;
-                s) echo todo;;
                 V) version && exit;;
                 h) usage && exit;;
                 \?) _echo2 "Invalid option"; usage && exit;;
