@@ -1,3 +1,9 @@
+   Oct 2006: 0.2.17 Miek <miek@miek.nl>
+   -- non backwards update --
+   * mirror.pl: remove the YYYYMM suffix for backup directory
+   * mirror.sh: remove the YYYYMM suffix for backup directory
+   * added rdup.cron example
+
 18 Sep 2006: 0.2.16 Miek <miek@miek.nl>
    -- bugfixes and moved to the perl utils --
    rdup:
